fix bugs on safari

--- a/source/stylesheets/components/_playlist_card.scss
+++ b/source/stylesheets/components/_playlist_card.scss
@@ -10,6 +10,7 @@
   width: 100%;
   margin: 20px;
   max-width: 300px;
+  flex-basis: 300px;
   background: white;
   padding: 12px;
   border-radius: 10px;
