--- a/source/stylesheets/pages/playlists/_show.scss
+++ b/source/stylesheets/pages/playlists/_show.scss
@@ -30,6 +30,7 @@
 
     & > img {
       height: 100%;
+      flex-shrink: 0;
     }
   }
 
